# autonomous

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
.toolchains/: raspberry64.cmake
include/: missioncontrol.h
include/backend/: bmp390.h  gps.h  mpu6050.h  pca9685.h  pca9685_macros.h  qmc5883.h  socket.h  udp.hpp
include/math/: constants.h  filter_vector.h  math.h  matrix.h  quarternion.h  serialize.hpp  vector.h
include/subsystem/: adiru.hpp  led_driver.hpp  motor_driver.hpp
include/util/: log.h  print_utils.hpp  server.h  str_utils.h  timer.h
scripts/: calc-mag-coeff.py  ping-drone.js
src/: adiru.cpp  gps_test.cpp  mag_test.cpp  missioncontrol.cpp  monitor.cpp  motor_controller.cpp
src/backend/: bmp390.cpp  gps.cpp  i2c.cpp  mpu6050.cpp  net.cpp  pca9685.cpp  qmc5883.cpp  socket.cpp  udp.cpp
src/guidance/: auto_com.cpp
src/main/: adiru-nosocket.cpp  adiru.cpp  arm.cpp  discovery.cpp  drone.cpp  mag_test.cpp  motor_controller.cpp
src/math/: filter.cpp  filter_vector.cpp  math.cpp  quarternion.cpp  serialize.cpp  vector.cpp
src/subsystem/: adiru.cpp  led_driver.cpp  motor_driver.cpp
src/tests/: hello.cpp  pressure.cpp
src/util/: log.cpp  server.cpp  str_utils.cpp  timer.cpp
toolchains/: raspberrpi.cmake
